# job-hunt-v2

./: .replit  app.py  pyproject.toml
templates/: footer.html  home.html  job-application.html  job-item.html  navbar.html
