[tool.poetry]
name = "repl-nix-flask-first-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_flask_first_1"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
